# agentinbox

./: .env.example  .gitignore  README.md  agentinbox.sln  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: code-reviewer.agent.md  implementer.agent.md  investigator.agent.md  planner.agent.md
.github/hooks/: copilot-hooks.json
.github/hooks/scripts/: pre-tool-policy.ps1  session-start.ps1
.github/instructions/: groupme-agent.instructions.md  security.instructions.md  startup.instructions.md
.github/prompts/: debug-investigation.prompt.md
azure-function/: README.md  package-lock.json  package.json
azure-function/groupme-callback/: index.js
azure-function/shared/: site-chat.js
azure-function/site-chat-config/: index.js
azure-function/site-chat-send/: index.js
scripts/: Upload-GroupMeImage.ps1
service/: AgentInboxService.csproj  CliTool.cs  Program.cs  ServiceConfig.cs  Worker.cs  agentinbox-service.json
src/agentinbox/: __init__.py  __main__.py  config.py  daemon.py  ensure_daemon.ps1  executor.py  inbox.py  keep_awake.py  notify.py  reply_router.py  task_tracker.py
src/agentinbox/executors/: command.py  copilot.py  python_script.py
tools/: Get-QueueMessage.ps1  Set-FunctionAppPersonas.ps1  Setup-Queue.ps1  Test-QueueFlow.ps1
